--- a/render.yaml
+++ b/render.yaml
@@ -9,3 +9,5 @@ services:
         value: 3000
       - key: NODE_ENV
         value: production
+      - key: TESSERACT_PATH
+        value: /usr/bin/tesseract
